--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,13 @@
     transform: rotate(360deg);
   }
 }
+
+.maze{
+  /* width: 50%; */
+  /* height: inherit; */
+  /* position:fixed ; */
+  left: 25%;
+  margin-top: 10px;
+  margin-left: 10%;
+  margin-right: 10%;
+}
