--- a/src/components/Maze.css
+++ b/src/components/Maze.css
@@ -28,3 +28,15 @@
     border-style: solid;
 }
 
+.box5{
+    width: 100%;
+    height: 100%;
+    background-color: rgb(170, 255, 155);
+    border-style: solid;
+}
+.box6{
+    width: 100%;
+    height: 100%;
+    background-color: rgb(38, 255, 0);
+    border-style: solid;
+}
