--- a/src/components/Maze.css
+++ b/src/components/Maze.css
@@ -19,7 +19,7 @@
 }
 .box1{
     width: 100%;
-    height: calc(width);
+    height: 100%;
     background-color: rgb(248, 248, 190);
     /* border-style: solid; */
     text-indent: 100%;
